--- a/index.html
+++ b/index.html
@@ -135,17 +135,25 @@
             <div class="grid">
 
                 <div>
-                    <img src="" alt="">
+                    <img src="./image/campeonatos1.png" alt="">
+
+                    <p>Campeonatos</p>
                     
                 </div>
                 <div>
+                    <img src="./image/atualizacao1.jpeg" alt="">
 
+                    <p>Atualizações</p>
                 </div>
                 <div>
+                    <img src="./image/megacaixa1.jpg" alt="">
 
+                    <p>As Megacaixas voltaram</p>
                 </div>
                 <div>
+                    <img src="./image/campanha1.jpeg" alt="">
 
+                    <p>Campanha Supercell Make</p>
                 </div>
             </div>
         </section>
