terminar section de news
terminar section de news

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
          <div class="mobile-menu" id="mobileMenu">
 
             <button class="close button" id="close">
-                <i class="fa-solid fa-x"></i>
+                <i class="fa-solid fa-x" style="color: black;"></i>
             </button>
 
             <ul class="nav-links-mobile">
@@ -72,7 +72,7 @@
          </div>
 
          <button class="hamburger" id="hamburgerButton">
-            <i class="fas fa-bars"></i>
+            <i class="fas fa-bars" style="color: black;"></i>
          </button>
 
     </header>
